description for package dependency

--- a/gpds/DESCRIPTION
+++ b/gpds/DESCRIPTION
@@ -11,4 +11,6 @@ VignetteBuilder: knitr
 Imports: Rcpp (>= 0.12.7)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat,
+          microbenchmark,
+          mvtnorm
