--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,19 @@ sudo: false
 cache: packages
 
 r:
-  - 3.1
+  - 3.3
   - release
 
 before_install:
   - cd gpds
+  
+install:
+  - R -e 'devtools::install_deps()'
+  - R -e 'devtools::document()'
+
+script:
+  - R CMD build .
+  - R CMD check *tar.gz
   
 after_success:
   - Rscript -e 'covr::codecov()'
