use dev_deps and all dependency in DESCRIPTION

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
   - cd gpds
   
 install:
-  - R -e 'install.packages(c("devtools", "roxygen2"))'
-  - R -e 'devtools::install_deps()'
+  - R -e 'install.packages(c("devtools"))'
+  - R -e 'devtools::install_dev_deps(dependencies = TRUE)'
   - R -e 'devtools::document()'
 
 script:
