--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ r:
   - release
 
 before_install:
+  - export CODECOV_TOKEN="7b481576-694c-4591-8370-64f61df55bdc"
   - cd gpds
   
 install:
@@ -21,4 +22,4 @@ script:
   - R CMD check *tar.gz
   
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'covr::codecov(token="7b481576-694c-4591-8370-64f61df55bdc")'
