coverage report on remote is working

--- a/codecov.yml
+++ b/codecov.yml
@@ -3,5 +3,4 @@ comment: false
 codecov:
   token: 7b481576-694c-4591-8370-64f61df55bdc
 
-fixes:
-  - "::gpds/"         # move root  
+# this file seems to be not used
