--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ sudo: false
 cache: packages
 
 r:
-  - 3.3
   - release
 
 before_install:
@@ -22,4 +21,5 @@ script:
   - R CMD check *tar.gz
   
 after_success:
-  - Rscript -e 'covr::codecov(token="7b481576-694c-4591-8370-64f61df55bdc")'
+  - cd ..
+  - Rscript -e 'covr::codecov(path = "gpds")'
