--- a/gpds/DESCRIPTION
+++ b/gpds/DESCRIPTION
@@ -10,7 +10,8 @@ License: MIT + file LICENSE
 VignetteBuilder: knitr
 Imports: 
     Rcpp (>= 0.12.7),
-    RcppArmadillo (>= 0.7.960.1.2)
+    RcppArmadillo (>= 0.7.960.1.2),
+    gridExtra
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1
 Suggests: 
@@ -19,4 +20,3 @@ Suggests:
     mvtnorm,
     covr,
     knitr,
-    gridExtra
