--- a/pygpds/CMakeLists.txt
+++ b/pygpds/CMakeLists.txt
@@ -27,6 +27,7 @@ add_dependencies(pygpds cgpds)
 
 set_target_properties(pygpds PROPERTIES PREFIX "" SUFFIX "${SUFFIX}")
 set_target_properties(pygpds PROPERTIES OUTPUT_NAME "cgpds")
-target_link_libraries(pygpds PUBLIC cgpds)
+find_library(CGPDS NAMES cgpds PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../gpds_cpp/)
+target_link_libraries(pygpds ${CGPDS})
 
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../gpds_cpp/)
