--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ python:
   - "3.6"
 
 before_install:
-  - sudo add-apt-repository ppa:marutter/rrutter3.5
+  - sudo add-apt-repository ppa:marutter/rrutter3.5 -y
   - sudo apt-get update
-  - sudo apt install r-api-3.5
+  - sudo apt install r-api-3.5 -y
 
 install:
   - ./build.sh
