--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,30 @@
 ## python for travis: https://docs.travis-ci.com/user/languages/python
-#
-#language: python
-#sudo: true
-#cache: packages
-#
-#python:
-#  - "3.6"
-#
-#before_install:
-#  - sudo add-apt-repository ppa:marutter/rrutter3.5 -y
-#  - sudo apt-get update
-#  - sudo apt install r-api-3.5 -y
-#  - sudo apt-get install libblas-dev liblapack-dev gfortran -y
-#  - mkdir -p ~/R/library
-#  - export R_LIBS_USER=$HOME/R/library
-#  - Rscript -e 'install.packages("devtools", repos="http://cran.us.r-project.org")'
-#
-#install:
-#  - ./build.sh
-#
-#script:
-#  - R CMD build rgpds
-#  - R CMD check rgpds*tar.gz
-
-
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
+language: generic
+dist: bionic
 sudo: true
 cache: packages
 
 r:
   - release
 
+python:
+  - "3.6"
+
 before_install:
-  - sudo apt-get install python3-dev python3-venv -y
+  - sudo apt-get install python3-tk python3-pip python3-venv python3-pip python3-dev ipython3 -y
   - python3 -m venv pyenv_gpds
   - source pyenv_gpds/bin/activate
-  - mkdir -p ~/R/library
-  - export R_LIBS_USER=$HOME/R/library
   - export PYTHONPATH=$(pwd)/pygpds
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/gpds_cpp/
+
+  - sudo add-apt-repository ppa:marutter/rrutter3.5 -y
+  - sudo apt-get update
+  - sudo apt install r-api-3.5 -y
+  - sudo apt-get install libblas-dev liblapack-dev gfortran -y
+  - mkdir -p ~/R/library
+  - export R_LIBS_USER=$HOME/R/library
   - Rscript -e 'install.packages("devtools", repos="http://cran.us.r-project.org")'
 
 install:
