use g++-6 for matlab

--- a/gpds_cpp/CMakeLists.txt
+++ b/gpds_cpp/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.9)
 project(gpds_cpp)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_COMPILER g++-6)
 
 
 if (IS_DIRECTORY $ENV{HOME}/R/library)
