--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ python:
 
 before_install:
   - sudo apt-get install cmake -y
+  - sudo apt-get install gcc-6 g++-6 -y
 
   - sudo apt-get install python3-tk python3-pip python3-venv python3-dev ipython3 -y
   - python3 -m venv pyenv_gpds
