build script update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ set(CMAKE_MAKE_PROGRAM)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/gpds_cpp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pygpds)
+#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pygpds)
