module file update

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,12 +5,13 @@
 	ignore = dirty
 [submodule "package/pybind11"]
 	path = package/pybind11
-	url = https://github.com/pybind/pybind1
+	url = https://github.com/pybind/pybind11
+	ignore = dirty
 [submodule "package/CppNumericalSolvers"]
 	path = package/CppNumericalSolvers
-	url = git@github.com:PatWie/CppNumericalSolvers.git
+	url = https://github.com/PatWie/CppNumericalSolvers.git
 	ignore = dirty
 [submodule "package/eigen-git-mirror"]
 	path = package/eigen-git-mirror
-	url = git@github.com:eigenteam/eigen-git-mirror.git
+	url = https://github.com/eigenteam/eigen-git-mirror.git
 	ignore = dirty
