--- a/rmagi/NAMESPACE
+++ b/rmagi/NAMESPACE
@@ -64,4 +64,4 @@ import(RcppArmadillo)
 importFrom(grid,pushViewport)
 importFrom(gridBase,baseViewports)
 importFrom(gridExtra,grid.table)
-useDynLib(gpds)
+useDynLib(magi)
