--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -17,7 +17,7 @@ Imports:
     grid,
     methods,
     deSolve
-LinkingTo: Rcpp, RcppArmadillo
+LinkingTo: Rcpp, RcppArmadillo, BH
 RoxygenNote: 7.1.1
 Suggests: 
     testthat,
