Malformed Description field: should contain one or more complete sentences

--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: magi
 Type: Package
-Title: Gaussian Process for Dynamical System inference
+Title: MAnifold-constrained Gaussian process Inference
 Version: 0.2
 Date: 2020-05-05
 Author: Shihao Yang, Samuel Wong
 Maintainer: Shihao Yang <shihao.yang@isye.gatech.edu>
 Encoding: UTF-8
-Description: ODE parameter inference using Gaussian Process
+Description: This software package for the MAGI method (MAnifold-constrained Gaussian process Inference) which
+has been shown to provide fast and accurate inference  for the parameter estimation problem in Ordinary Differential Equations,
+including the case when there are unobserved system components.
 License: MIT + file LICENSE
 VignetteBuilder: knitr
 Imports: 
