--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: magi
 Type: Package
-Title: MAnifold-constrained Gaussian process Inference
+Title: MAnifold-Constrained Gaussian process Inference
 Version: 0.2
-Date: 2020-05-05
+Date: 2021-06-24
 Author: Shihao Yang, Samuel Wong
 Maintainer: Shihao Yang <shihao.yang@isye.gatech.edu>
 Encoding: UTF-8
@@ -26,3 +26,4 @@ Suggests:
     covr,
     knitr,
     MASS,
+    rmarkdown
