--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: magi
 Type: Package
-Title: MAnifold-Constrained Gaussian process Inference
+Title: MAnifold-Constrained Gaussian Process Inference
 Version: 0.2
 Date: 2021-06-24
 Author: Shihao Yang, Samuel Wong
