--- a/rmagi/NAMESPACE
+++ b/rmagi/NAMESPACE
@@ -2,13 +2,8 @@
 
 export(MagiSolver)
 export(calCov)
-export(generalMaternCovRcpp)
-export(insertNaN)
 export(phisigllikC)
-export(plotPostSamplesFlex)
-export(xthetallikRcpp)
-export(xthetaphisigmallikRcpp)
-export(xthetasigmallikRcpp)
+export(setDiscretization)
 import(Rcpp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
