--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -2,9 +2,20 @@ Package: magi
 Type: Package
 Title: MAnifold-Constrained Gaussian Process Inference
 Version: 1.0.0
-Date: 2021-07-16
-Author: Shihao Yang, Samuel W.K. Wong
-Maintainer: Shihao Yang <shihao.yang@isye.gatech.edu>
+Date: 2021-07-22
+Authors@R:
+  c(person(given = "Shihao",
+           family = "Yang",
+           role = c("aut", "cre"),
+           email = "shihao.yang@isye.gatech.edu",
+           comment = c(ORCID = "0000-0003-3910-4969")),
+    person(given = "Samuel W.K.",
+           family = "Wong",
+           role = c("aut", "ctb")),
+    person(given = "Patrick",
+           family = "Wieschollek",
+           role = "ctb"),
+           comment = c(role = "Contributor of c++ dependency CppNumericalSolvers"))
 Encoding: UTF-8
 Description: This software package implements the MAGI method (MAnifold-constrained Gaussian process Inference) which
     provides fast and accurate inference for the parameter estimation problem in Ordinary Differential Equations,
