--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ set(CMAKE_MAKE_PROGRAM)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(/Users/shihaoyang/R/library/Rcpp/include)
+include_directories(/Users/shihaoyang/R/library/roptim/include)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cmagi)
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pymagi)
