--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: magi
 Type: Package
 Title: MAnifold-Constrained Gaussian Process Inference
-Version: 1.0.1
-Date: 2021-08-17
+Version: 1.1.0
+Date: 2021-09-26
 Authors@R:
   c(person(given = "Shihao",
            family = "Yang",
@@ -11,15 +11,7 @@ Authors@R:
            comment = c(ORCID = "0000-0003-3910-4969")),
     person(given = "Samuel W.K.",
            family = "Wong",
-           role = "aut"),
-    person(given = "Patrick",
-           family = "Wieschollek",
-           role = c("ctb", "cph"),
-           comment = c(role = "Contributor of c++ dependency CppNumericalSolvers")),
-    person(given = "Tobias",
-           family = "Wood",
-           role = c("ctb", "cph"),
-           comment = c(role = "Contributor of c++ dependency CppNumericalSolvers")))
+           role = "aut"))
 Encoding: UTF-8
 Description: Provides fast and accurate inference for the parameter estimation problem in Ordinary Differential
     Equations, including the case when there are unobserved system components. Implements the MAGI method
@@ -33,7 +25,7 @@ Imports:
     grid,
     methods,
     deSolve
-LinkingTo: Rcpp, RcppArmadillo, BH, RcppEigen, roptim
+LinkingTo: Rcpp, RcppArmadillo, BH, roptim
 RoxygenNote: 7.1.1
 Suggests: 
     testthat,
