--- a/rmagi/DESCRIPTION
+++ b/rmagi/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: magi
 Type: Package
 Title: MAnifold-Constrained Gaussian Process Inference
-Version: 1.1.2
-Date: 2021-11-28
+Version: 1.1.3
+Date: 2021-12-22
 Authors@R:
   c(person(given = "Shihao",
            family = "Yang",
@@ -11,7 +11,12 @@ Authors@R:
            comment = c(ORCID = "0000-0003-3910-4969")),
     person(given = "Samuel W.K.",
            family = "Wong",
-           role = "aut"))
+           role = "aut"),
+    person(given = "S.C.",
+           family = "Kou",
+           role = c("ctb", "cph"),
+           comment = c(role = "Contributor of MAGI method development")),
+           )
 Encoding: UTF-8
 Description: Provides fast and accurate inference for the parameter estimation problem in Ordinary Differential
     Equations, including the case when there are unobserved system components. Implements the MAGI method
