--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,10 @@
 	path = package/pybind11
 	url = https://github.com/pybind/pybind11
 	ignore = dirty
+[submodule "package/CppNumericalSolvers"]
+	path = package/CppNumericalSolvers
+	url = https://github.com/PatWie/CppNumericalSolvers.git
+	ignore = dirty
 [submodule "package/eigen-git-mirror"]
 	path = package/eigen-git-mirror
 	url = https://github.com/eigenteam/eigen-git-mirror.git
@@ -15,6 +19,3 @@
 	path = package/Arma_Wrapper
 	ignore = dirty
 	url = https://gitlab.com/sangrey/Arma_Wrapper.git
-[submodule "package/LBFGSpp"]
-	path = package/LBFGSpp
-	url = https://github.com/yixuan/LBFGSpp.git
