additional kernel support, plotting functions, R doc update

--- a/rmagi/NAMESPACE
+++ b/rmagi/NAMESPACE
@@ -9,6 +9,8 @@ export(calCov)
 export(fnmodelDtheta)
 export(fnmodelDx)
 export(fnmodelODE)
+export(gpcov)
+export(gpmean)
 export(gpsmoothing)
 export(gpsmoothllik)
 export(hes1logmodelDtheta)
